# lab-aid

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  Module_Common.bas  Module_Display.bas  Module_Entry.bas  Module_MasterManager.bas  Module_PreProcess.bas  Module_PreProcess.bas.bak  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  release.yml  test.yml
docs/: conf.py  index.md
docs/design/engine/: 00_engine_overview.md  01_background_purpose.md  02_overview.md  03_requirements.md  04_detail_design.md  05_environment_setup.md  06_operation_usecase.md  07_test_spec.md  08_constraints.md  09_maintenance_notes.md
docs/guidelines/: handover_guide.md
docs/reference/: api.md
src/lab_aid/: __init__.py  builtins.py  excel_cli.py
src/lab_aid/engine/: __init__.py  builtins.py
src/lab_aid/engine/runtime/: __init__.py  api.py  constants.py  engine_core.py  inputs.py  text.py
src/lab_aid/engine/runtime/functions/: __init__.py  base.py  numeric.py  package.py  string.py
tests/: conftest.py  engine_test.py  test_basic.py
windows/: README.md  lab_aid-0.1.0-py3-none-any.whl  run_lab_aid.cmd  setup_lab_aid.cmd  setup_lab_aid.ps1
認定制度/: 1-認定の目的と目標.md  2-認定レベルと権限.md  3-認定テスト作成ガイドライン.md  4-認定テスト-操作者レベル1.md  5-認定テスト-操作者レベル2.md  6-認定テスト-操作者レベル3.md  7-認定テスト-マスタ管理者レベル1.md  8-認定テスト-マスタ管理者レベル2.md  9-認定テスト-マスタ管理者レベル3.md
