[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lab-aid"
dynamic = ["version"]
description = "Tools and assets for Lab-Aid."
authors = [
    { name = "stfukuda" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    # A list of PyPI classifiers that apply to your project. Check https://pypi.org/classifiers/.
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
]

[project.urls]
# Homepage = "None"
# Documentation = "None"
# Source = "None"
# Issues = "None"
# Changelog = "None"

[dependency-groups]
dev = [
]
lint = [
    "bandit[toml]",
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
]

[tool.bandit]
skips = ["B101", "B601"]

[tool.mypy]
python_version = "3.13"
show_error_codes = true
pretty = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true

[tool.ruff]
target-version = "py313"
extend-include = [".git"]
line-length = 88

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--ignore=src/lab_aid/_version.py"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/lab_aid/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_aid"]
